# tts_webui_extension.vibevoice

./: README.md  pyproject.toml  setup.py
extension_vibevoice/: __init__.py  backend_api.py  main.py
tts_webui_extension/vibevoice/: backend_api.py  main.py
