[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.vibevoice"
version = "0.2.2"
description = "A template extension for TTS Generation WebUI"
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "vibevoice @ git+https://github.com/rsxdalv/vibevoice@stable",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.vibevoice"

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
